# vn-thptqg-2024

./: .gitignore  pyproject.toml
thptqg/: __main__.py  constants.py
thptqg/regions/: hanoi.py  tay_ninh.py
