[tool.poetry]
name = "thptqg"
version = "0.1.0"
description = ""
authors = ["Nguyễn Thế Hưng <tretrauit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paddlepaddle-gpu = "^2.6.1"
paddleocr = "^2.8.0"
setuptools = "^70.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
